Fix: Apply overflow-x hidden to html and body

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html, body {
+    width: 100%;
     overflow-x: hidden;
 }
